syntax = "proto3";

package pb;

option go_package = "github.com/JeongWoo-Seo/pcBook/pb";

import "laptop.proto";
import "filter.proto";

message CreateLaptopRequest { 
    Laptop laptop = 1;
}

message CreateLaptopResponse {
    string id = 2;
}

message SearchLaptopRequest{
    Filter filter = 1;
}

message SearchLaptopResponse{
    Laptop laptop = 1;
}

service LaptopService{
    rpc CreateLaptop(CreateLaptopRequest) returns (CreateLaptopResponse){
    };

    rpc SearchLaptop(SearchLaptopRequest) returns (stream SearchLaptopResponse){
    };
}